# clothing-purchase-decision

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  superpowers_brainstorm.md  superpowers优化方案.md  superpowers修复方案.md  superpowers评估报告.md  superpowers评估报告_v3.md  v3_superpower_user_tests.md  会话内容完整记录.md  历史会话记录.md  设计方案_v2.md  设计方案_v3_hybrid.md  设计方案_v3_superpowers.md  设计方案_v3_superpowers_bak.md
.agnes/memories/: records.jsonl
.github/workflows/: debug.yml  deploy.yml
.superpowers/sdd/: progress.md
deploy/: clothing-decision.service
docs/design/: module_c_backup.txt  module_c_current.txt  设计方案.md
docs/evaluations/: superpowers评估报告_v2.md  superpowers评估报告_v4.md
docs/notes/: 会话内容完整记录.md
scripts/: check_design.py  check_design2.py  check_design3.py  check_headings.py  check_logs.py  check_md.py  check_md2.py  check_md_head.py  check_module_c.py  check_sections.py  demo_user_flow.py  deploy_server.py  deploy_test.py  fix_run.py  patch_hybrid.py  patch_missing_design.py  patch_remaining_design.py  patch_risks.py  patch_v3.diff  patch_v3.py  patch_v3_apply.diff  patch_v3_utf8.py  server_setup.sh  test_inspiration.py  view_run.py
src/app/: main.py
tests/: conftest.py  test_api.py  test_body_integration.py  test_design_functional.py  test_design_spec.py  test_image_upload.py  test_outfit_integration.py  test_roi_integration.py  test_similarity.py  test_social_recommendation.py  test_superpower_fixes.py  test_wardrobe_search.py
(+29 files in other folders)
